# naptrace

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  STATUS.md  deny.toml  install.sh
.github/: action.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml
benchmarks/: README.md  ground_truth.yaml  run.sh
crates/naptrace/: Cargo.toml
crates/naptrace-core/: Cargo.toml
crates/naptrace-core/src/: lib.rs
crates/naptrace-core/src/ingest/: diff_parser.rs  mod.rs  source.rs
crates/naptrace-core/src/prompt/: mod.rs
crates/naptrace-core/src/reason/: mod.rs
crates/naptrace-core/src/report/: mod.rs
crates/naptrace-core/src/rerank/: mod.rs
crates/naptrace-core/src/retrieve/: cache.rs  extract.rs  mod.rs  normalize.rs
crates/naptrace-core/src/signature/: mod.rs
crates/naptrace-core/src/slice/: mod.rs
crates/naptrace-core/src/verify/: mod.rs
crates/naptrace-core/tests/: e2e_pipeline.rs  ingest_tests.rs
crates/naptrace-core/tests/fixtures/: sqlite_cve_2025_6965.patch
crates/naptrace-core/tests/snapshots/: ingest_tests__sqlite_cve_2025_6965_hunk0_content.snap  ingest_tests__sqlite_cve_2025_6965_parsed.snap
crates/naptrace-embed/: Cargo.toml
crates/naptrace-embed/src/: lib.rs  local.rs  ollama.rs  voyage.rs
crates/naptrace-joern/: Cargo.toml
crates/naptrace-joern/src/: cpg.rs  download.rs  lib.rs
crates/naptrace-llm/: Cargo.toml
crates/naptrace-llm/src/: anthropic.rs  groq.rs  lib.rs  ollama.rs  openai.rs  retry.rs
crates/naptrace/src/: banner.rs  doctor.rs  explain.rs  hunt.rs  init_action_template.yml  main.rs
packaging/: naptrace.rb
prompts/: distill_signature.md  explain_finding.md  reason_feasibility.md  rerank_candidates.md
research/: cve_2026_candidates.md
rulepacks/: c_memory_safety.yaml  go_concurrency.yaml  java_deserialization.yaml  ml_framework_security.yaml  python_injection.yaml  rust_safety.yaml
