[workspace]
members = [
    "crates/naptrace",
    "crates/naptrace-core",
    "crates/naptrace-joern",
    "crates/naptrace-embed",
    "crates/naptrace-llm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/hamzamiladin/naptrace"

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17"
colored = "2.1"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Parsing
tree-sitter = "0.25"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"

# Git / patch handling
gix = "0.66"
unidiff = "0.3"

# Vector store (embedded, no server)
lancedb = "0.23"
arrow-array = "53"
arrow-schema = "53"

# SARIF output
serde-sarif = "0.7"

# Local LLM / embedding (ONNX runtime)
ort = { version = "2.0.0-rc.9", features = ["download-binaries"] }
tokenizers = "0.20"

# Error / logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utils
sha2 = "0.10"
directories = "5"
tempfile = "3"
walkdir = "2"
once_cell = "1"

# Internal crates
naptrace-core = { path = "crates/naptrace-core" }
naptrace-joern = { path = "crates/naptrace-joern" }
naptrace-embed = { path = "crates/naptrace-embed" }
naptrace-llm = { path = "crates/naptrace-llm" }
