[package]
name = "naptrace-joern"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Joern CPG IPC wrapper for Naptrace"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
sha2.workspace = true
directories.workspace = true
tempfile.workspace = true
