[package]
name = "naptrace-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LLM clients (Anthropic, OpenAI, Ollama) for Naptrace"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
